--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ language: zh-CN
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://youfu.xyz
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
@@ -35,9 +35,9 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 highlight:
-enable: true
-line_number: true
-tab_replace:
+  enable: true
+  line_number: true
+  tab_replace:
 
 # Category & Tag
 default_category: uncategorized
@@ -48,9 +48,9 @@ tag_map:
 ## 2: Enable pagination
 ## 1: Disable pagination
 ## 0: Fully Disable
-archive: 2
-category: 2
-tag: 2
+archive: 1
+category: 1
+tag: 1
 
 # Server
 ## Hexo uses Connect as a server
@@ -70,7 +70,7 @@ time_format: H:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Disqus
