--- a/themes/light/_config.yml
+++ b/themes/light/_config.yml
@@ -7,8 +7,8 @@ widgets:
 - search
 - category
 - tagcloud
-- weibo
-- blogroll
+- recent_posts
+#- blogroll
 
 
 excerpt_link: Read More
@@ -21,20 +21,14 @@ twitter:
 addthis:
   enable: true
   pubid:
-  facebook: true
-  twitter: true
-  google: true
-  pinterest: true
 
 fancybox: true
 
 google_analytics:
 rss:
 
-comment_provider: facebook
-# Facebook comment
-facebook:
-  appid: 123456789012345
-  comment_count: 5
-  comment_width: 840
-  comment_colorscheme: light
+# Duoshuo
+duoshuo_shortname: 
+
+# Baidu share
+baidushare: true
