--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.8.3",
   "private": true,
   "dependencies": {
+    "hexo-generator-feed": "^0.2.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.1.0",
     "hexo-renderer-stylus": "^0.1.0"
