--- a/themes/light/_config.yml
+++ b/themes/light/_config.yml
@@ -2,6 +2,7 @@
   首页: /
   存档: /archives
   关于: /about
+  RSS: /atom.xml
 
 widgets:
 - search
@@ -25,7 +26,7 @@ addthis:
 fancybox: true
 
 google_analytics:
-rss:
+rss: /atom.xml
 
 # Duoshuo
 duoshuo_shortname: 
