--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Blue0verFl0W
 author: 有福
 avatar: http://7teb9r.com1.z0.glb.clouddn.com/20150401010521176.jpg
 email: youfu.ok@163.com
-language: zh-CN
+language: zh-Hans
 since: 2014
 theme: next
 
@@ -16,10 +16,6 @@ theme: next
 url: http://youfu.xyz
 root: /
 permalink: :year/:month/:day/:title/
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
 
 # Directory
 source_dir: source
@@ -36,17 +32,8 @@ post_asset_folder: false
 relative_link: false
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   tab_replace:
-
-
-# Archives
-## 2: Enable pagination
-## 1: Disable pagination
-## 0: Fully Disable
-archive: 1
-category: 1
-tag: 1
 
 # Server
 ## Hexo uses Connect as a server
@@ -66,8 +53,8 @@ logger_format: dev
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 1
-pagination_dir: page
+#per_page: 1
+#pagination_dir: page
 
 # Social links
 social:
