--- a/_config.yml
+++ b/_config.yml
@@ -21,20 +21,6 @@ permalink: :year/:month/:day/:title/
 source_dir: source
 public_dir: public
 
-# Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
-filename_case: 0
-render_drafts: false
-post_asset_folder: false
-relative_link: false
-highlight:
-  enable: true
-  line_number: false
-  tab_replace:
-
 # Server
 ## Hexo uses Connect as a server
 ## You can customize the logger format as defined in
@@ -44,17 +30,17 @@ server_ip: localhost
 logger: false
 logger_format: dev
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
-#date_format: MMM D YYYY
-#time_format: H:mm:ss
 
-# Pagination
-## Set per_page to 0 to disable pagination
-#per_page: 1
-#pagination_dir: page
+index_generator:
+  per_page: 5
+
+archive_generator:
+  per_page: 0
+  yearly: true
+  monthly: true
+
+tag_generator:
+  per_page: 10
 
 # Social links
 social:
