--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,7 @@ tag_generator:
 # Social links
 social:
   GitHub: https://github.com/chenyoufu
-  李志官网: http://www.nanjinglizhi.cn
-  像猫小萌一样飞驰: http://www.lihuia.com
+  flyaway: http://flyaway.me/
 
 baidu_analytics: 79422e1e0a95c1774f227dadecc2ce8f
 duoshuo_shortname: youfuxyz
