update 2015 read book

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ tag_generator:
 # Social links
 social:
   GitHub: https://github.com/chenyoufu
-  flyaway: http://flyaway.me/
+  辉神博客: http://flyaway.me/
 
 baidu_analytics: 79422e1e0a95c1774f227dadecc2ce8f
 duoshuo_shortname: youfuxyz
