add lean cloud read counter function

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -222,16 +222,16 @@ facebook_sdk:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: 5OieYo8AjLWXoXvIHMoCpM27-gzGzoHsz
+  app_key: OHxaLkdyWVWKs456y41h7slm
 
 
 # Tencent analytics ID
 # tencent_analytics:
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
-baidu_push: false
+baidu_push: true
 
 
 
