--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -27,10 +27,10 @@ rss:
 # Remove leading slashes ( "/archives" -> "archives" )
 menu:
   home: /
-  categories: /categories
+  categories: categories
 #about: /about
-  archives: /archives
-  tags: /tags
+  archives: archives
+  tags: tags
 #commonweal: /404.html
 
 
