--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "2.8.3",
   "private": true,
   "hexo": {
-    "version": "3.1.1"
+    "version": "3.4.4"
   },
   "dependencies": {
-    "hexo": "^3.1.0",
+    "hexo": "^3.4.4",
     "hexo-deployer-git": "0.0.4",
     "hexo-generator-archive": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-index": "^0.1.2",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
